Retrieve and filter comments correctly with required information, squish some ui bugs

--- a/client/src/sass/components/_profile-image.scss
+++ b/client/src/sass/components/_profile-image.scss
@@ -1,5 +1,6 @@
 .profile-image {
   position: relative;
+  cursor: pointer;
   img {
     width: 100%;
     height: 100%;
