--- a/client/src/sass/pages/_profilePage.scss
+++ b/client/src/sass/pages/_profilePage.scss
@@ -70,5 +70,4 @@
   grid-auto-rows: 25rem;
   grid-column-gap: 2.5rem;
   grid-row-gap: 2.5rem;
-  cursor: pointer;
 }
